Fix gap

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -7,7 +7,7 @@
   );
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 5px 0;
   justify-content: flex-start;
   list-style: none;
   padding: 0 10px;
